--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,5 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Run a one-line script
+      - name: Run Tests
         run: ./deploy.sh
+      - uses: akhileshns/heroku-deploy@v3.5.6
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'shiviraj-counter'
+          heroku_email: 'raj.shiviraj@gmail.com'
