--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,6 @@ jobs:
       - name: install
         run: npm install
       - name: test
-        run: npm run build
+        run: npm test
         env:
           CI: true
