--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,15 +20,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: npm install
-        run: |
-          ls
-          npm install
-      - name: npm test
-        run: |
-          npm test
-        env:
-          CI: true
+      # - name: npm install
+      #   run: |
+      #     ls
+      #     npm install
+      # - name: npm test
+      #   run: |
+      #     npm test
+      #   env:
+      #     CI: true
 
       - name: geting react app
         uses: actions/checkout@v2
