--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -47,7 +47,7 @@ jobs:
         run: |
           ls react-app
           rm -rf ./public/*
-          mv react-app/build/* ./public
+            mv react-app/build/* ./public
           rm -rf react-app
           git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
           git config --global user.name ${{ secrets.GIT_USER_NAME }}
