--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: clone heroku application
+        run: |
+          heroku git:clone https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+          ls
+          ls shiviraj-counter
+
       # - name: npm install
       #   run: |
       #     ls
@@ -30,32 +36,32 @@ jobs:
       #   env:
       #     CI: true
 
-      - name: geting react app
-        uses: actions/checkout@v2
-        with:
-          repository: shiviraj/counter
-          path: react-app
-          fetch-depth: 0
+      # - name: geting react app
+      #   uses: actions/checkout@v2
+      #   with:
+      #     repository: shiviraj/counter
+      #     path: react-app
+      #     fetch-depth: 0
 
-      - name: building react app
-        run: |
-          ls
-          cd react-app
-          echo 'in react app'
-          ls
-      - name: moving build to server
-        run: |
-          ls react-app
-          rm -rf ./public/*
-            mv react-app/build/* ./public
-          rm -rf react-app
-          git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
-          git config --global user.name ${{ secrets.GIT_USER_NAME }}
-          git add .
-          git commit -m "added build"
+      # - name: building react app
+      #   run: |
+      #     ls
+      #     cd react-app
+      #     echo 'in react app'
+      #     ls
+      # - name: moving build to server
+      #   run: |
+      #     ls react-app
+      #     rm -rf ./public/*
+      #       mv react-app/build/* ./public
+      #     rm -rf react-app
+      #     git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
+      #     git config --global user.name ${{ secrets.GIT_USER_NAME }}
+      #     git add .
+      #     git commit -m "added build"
 
-      - name: Add remote origin
-        run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-      - name: Deploy to Heroku
-        run: |
-          git push heroku master -f
+      # - name: Add remote origin
+      #   run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+      # - name: Deploy to Heroku
+      #   run: |
+      #     git push heroku master -f
