--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,67 +1,18 @@
-name: CI
-on: [push]
+name: Deploy
+
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.5.7 # This is the action
         with:
-          repository: shiviraj/counterServer
-          fetch-depth: 100000
-          path: server
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: clone heroku application
-        run: |
-          heroku git:clone https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git --app ${{ secrets.HEROKU_APP_NAME }}
-          ls
-          ls shiviraj-counter
-
-      # - name: npm install
-      #   run: |
-      #     ls
-      #     npm install
-      # - name: npm test
-      #   run: |
-      #     npm test
-      #   env:
-      #     CI: true
-
-      # - name: geting react app
-      #   uses: actions/checkout@v2
-      #   with:
-      #     repository: shiviraj/counter
-      #     path: react-app
-      #     fetch-depth: 0
-
-      # - name: building react app
-      #   run: |
-      #     ls
-      #     cd react-app
-      #     echo 'in react app'
-      #     ls
-      # - name: moving build to server
-      #   run: |
-      #     ls react-app
-      #     rm -rf ./public/*
-      #       mv react-app/build/* ./public
-      #     rm -rf react-app
-      #     git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
-      #     git config --global user.name ${{ secrets.GIT_USER_NAME }}
-      #     git add .
-      #     git commit -m "added build"
-
-      # - name: Add remote origin
-      #   run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-      # - name: Deploy to Heroku
-      #   run: |
-      #     git push heroku master -f
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'shivi-counter' #Must be unique in Heroku
+          heroku_email: 'raj.shiviraj@gmail.com'
+          usedocker: true
