--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,9 @@ jobs:
           cd build
           rm -rf ../backend/.git ../backend/.github
           mv ../backend/* .
+          mv ../backend/.* .
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name ${{secrets.USERNAME}}
           git add .
           git commit -m "added build"
-          git push origin master --set-upstream -f;
+          git push -f;
