--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           cd build
           rm -rf ../backend/.git ../backend/.github
           mv ../backend/* .
-          mv ../backend/.* .
+          rm -rf node_modules
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name ${{secrets.USERNAME}}
           git add .
