--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,15 @@ jobs:
           rm -rf ../backend/.git ../backend/.github
           mv ../backend/* .
           rm -rf node_modules
-          git config --global user.email "58025059+shiviraj@users.noreply.github.com"
-          git config --global user.name ${{secrets.USERNAME}}
-          git add .
-          git commit -m "added build"
-          git push -f;
+          # git config --global user.email "58025059+shiviraj@users.noreply.github.com"
+          # git config --global user.name ${{secrets.USERNAME}}
+          # git add .
+          # git commit -m "added build"
+          # git push -f;
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.6.2
+        with:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          BRANCH: main # The branch the action should deploy to.
+          FOLDER: build # The folder the action should deploy.
+          CLEAN: true # Au
