--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           rm -rf node_modules
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name ${{secrets.USERNAME}}
-          git remote set-url https://${{secrets.TOKEN}}@github.com/${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
+          git remote set-url origin https://${{secrets.TOKEN}}@github.com/${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
           git add .
           git commit -m "added build"
           git push origin master -f;
