--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,15 @@ jobs:
         with:
           repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
           path: frontend
-      - name: Testing frontend
-        run: |
-          cd frontend
-          npm install
-          npm test
+      # - name: Testing frontend
+      #   run: |
+      #     cd frontend
+      #     npm install
+      #     npm test
       - name: Building frontend
         run: |
           cd frontend
+          npm install
           npm run build
           mv build ../backend/
           cd ..
@@ -48,7 +49,7 @@ jobs:
           git add .
           git commit -m "added build"
           echo "successfully committed \n\n<------->\n\n"
-          git push origin main -f;
+          git push -f;
       # - name: Deploy 🚀
       #   uses: JamesIves/github-pages-deploy-action@3.6.2
       #   with:
