--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
           fetch-depth: 1000
           repository: ${{secrets.USERNAME}}/${{secrets.BACKEND_REPO}}
           path: backend
-      - name: Testing Backend
-        run: |
-          cd backend
-          npm install
-          npm test
+      # - name: Testing Backend
+      #   run: |
+      #     cd backend
+      #     npm install
+      #     npm test
       # - uses: actions/checkout@v2
       #   with:
       #     repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
@@ -45,7 +45,7 @@ jobs:
           rm -rf node_modules
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name ${{secrets.USERNAME}}
-          git remote set-url origin https://${{secrets.TOKEN}}:x-oauth-basic:@github.com/${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
+          git remote set-url origin https://${{secrets.USERNAME}}:${{secrets.TOKEN}}@github.com/${{secrets.BUILD_REPO}}.git
           git add .
           git commit -m "added build"
           echo "successfully committed \n\n<------->\n\n"
