--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           rm -rf node_modules
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name ${{secrets.USERNAME}}
-          # git remote add origin https://${{secrets.USERNAME}}:${{secrets.TOKEN}}@github.com/${{secrets.BUILD_REPO}}.git
+          # git remote add origin https://${{secrets.USERNAME}}:${{secrets.TOKEN}}@github.com/${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
           git add .
           git commit -m "added build"
           echo "successfully committed \n\n<------->\n\n"
