--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,12 +45,12 @@ jobs:
           rm -rf node_modules
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name ${{secrets.USERNAME}}
-          git remote add origin https://${{secrets.USERNAME}}:${{secrets.TOKEN}}@github.com/${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git
+          git remote add origin https://${{secrets.USERNAME}}:${{secrets.TOKEN}}@github.com/${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}.git master
           git add .
           git commit -m "added build"
           echo "successfully committed \n\n<------->\n\n"
           ls -a && ls -a .git
-          git push
+          git push -u origin master
       # - name: Deploy 🚀
       #   uses: JamesIves/github-pages-deploy-action@3.6.2
       #   with:
