--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,28 +11,28 @@ jobs:
           fetch-depth: 1000
           repository: ${{secrets.USERNAME}}/${{secrets.BACKEND_REPO}}
           path: backend
-      # - name: Testing Backend
-      #   run: |
-      #     cd backend
-      #     npm install
-      #     npm test
-      # - uses: actions/checkout@v2
-      #   with:
-      #     repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
-      #     path: frontend
-      # # - name: Testing frontend
-      # #   run: |
-      # #     cd frontend
-      # #     npm install
-      # #     npm test
-      # - name: Building frontend
-      #   run: |
-      #     cd frontend
-      #     npm install
-      #     npm run build
-      #     mv build ../backend/
-      #     cd ..
-      #     rm -rf frontend
+      - name: Testing Backend
+        run: |
+          cd backend
+          npm install
+          npm test
+      - uses: actions/checkout@v2
+        with:
+          repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
+          path: frontend
+      - name: Testing frontend
+        run: |
+          cd frontend
+          npm install
+          npm test
+      - name: Building frontend
+        run: |
+          cd frontend
+          npm install
+          npm run build
+          mv build ../backend/
+          cd ..
+          rm -rf frontend
       - uses: actions/checkout@v2
         with:
           repository: ${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}
