modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.5.7
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.EMAIL}}
+          heroku_app_name: 'shivi-counter'
+          heroku_email: 'raj.shiviraj@gmail.com'
           usedocker: true
