modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,8 @@ jobs:
           cd backend
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
-          git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
+          git remote add origin git@github.com:shiviraj/counterBuild.git
+          # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
           git add .;
           git commit -m "deployed"
-          git push heroku master --set-upstream -f;
+          git push origin master --set-upstream -f;
