--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,38 +13,40 @@ jobs:
           repository: ${{secrets.USERNAME}}/${{secrets.BACKEND_REPO}}
           path: backend
 
-      - name: Testing Backend
-        run: |
-          cd backend
-          npm install
-          npm test
+      # - name: Testing Backend
+      #   run: |
+      #     cd backend
+      #     npm install
+      #     npm test
 
-      # - name: checkout frontend
-      - uses: actions/checkout@v2
-        with:
-          repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
-          path: frontend
+      # # - name: checkout frontend
+      # - uses: actions/checkout@v2
+      #   with:
+      #     repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
+      #     path: frontend
 
-      - name: Testing frontend
-        run: |
-          cd frontend
-          npm install
-          npm test
+      # - name: Testing frontend
+      #   run: |
+      #     cd frontend
+      #     npm install
+      #     npm test
 
-      - name: Building frontend
-        run: |
-          cd frontend
-          npm run build
-          mv build/* ../backend/public/.
-          cd ..
-          rm -rf frontend
+      # - name: Building frontend
+      #   run: |
+      #     cd frontend
+      #     npm run build
+      #     mv build/* ../backend/public/.
+      #     cd ..
+      #     rm -rf frontend
 
-      - name: Deploy to Heroku
+      - name: Push to Repo
         run: |
+          rm -rf .git
+          git init
+          git remote add origin git@github.com:shiviraj/counterBuild.git
           cd backend
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
-          git remote add origin git@github.com:shiviraj/counterBuild.git
           # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
           git add .;
           git commit -m "deployed"
