--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,12 @@ jobs:
           cd backend
           rm -rf .git
           git init
-          git remote add origin git@github.com:shiviraj/counterBuild.git
+          git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
-          # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
           git add .;
           git commit -m "deployed"
           git push origin master --set-upstream -f;
+
+          # git remote add origin git@github.com:shiviraj/counterBuild.git
+          # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
