--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,43 +13,48 @@ jobs:
           repository: ${{secrets.USERNAME}}/${{secrets.BACKEND_REPO}}
           path: backend
 
-      - name: Testing Backend
-        run: |
-          cd backend
-          npm install
-          npm test
+      # - name: Testing Backend
+      #   run: |
+      #     cd backend
+      #     npm install
+      #     npm test
 
-      # - name: checkout frontend
+      # # - name: checkout frontend
+      # - uses: actions/checkout@v2
+      #   with:
+      #     repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
+      #     path: frontend
+
+      # - name: Testing frontend
+      #   run: |
+      #     cd frontend
+      #     npm install
+      #     npm test
+
+      # - name: Building frontend
+      #   run: |
+      #     cd frontend
+      #     npm run build
+      #     mv build/* ../backend/public/.
+      #     cd ..
+      #     rm -rf frontend
+
       - uses: actions/checkout@v2
         with:
-          repository: ${{secrets.USERNAME}}/${{secrets.FRONTEND_REPO}}
-          path: frontend
-
-      - name: Testing frontend
-        run: |
-          cd frontend
-          npm install
-          npm test
-
-      - name: Building frontend
-        run: |
-          cd frontend
-          npm run build
-          mv build/* ../backend/public/.
-          cd ..
-          rm -rf frontend
+          repository: ${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}
+            path: build
 
       - name: Push to Repo
         run: |
           cd backend
-          rm -rf .github
-          git remote remove origin
-          git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
+          rm -rf .git .github
+          mv ../build/.git .
+          # git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
           git add .;
           git commit -m "deployed"
-          git push origin master --set-upstream -f;
+          git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
 
           # git remote add origin git@github.com:shiviraj/counterBuild.git
           # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
