--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,8 @@ jobs:
           git config --global user.name "shiviraj"
           git add .;
           git commit -m "deployed"
-          git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
+          git remote set-url --add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
 
+          # git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
           # git remote add origin git@github.com:shiviraj/counterBuild.git
           # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
