modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,9 @@ jobs:
           git config --global user.name "shiviraj"
           git add .;
           git commit -m "deployed"
+          git logs 
           git remote set-url --add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
-          git push
+          git push origin master --set-upstream -f 
 
 
           # git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
