--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,17 +49,19 @@ jobs:
           cd backend
           rm -rf .git .github
           mv ../build/.git .
-          # git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
           git add .;
           git commit -m "deployed"
-          curl -u "shiviraj:${{secrets.TOKEN}}" https://github.com/shiviraj/counterBuild.git
-          git remote set-url --add origin https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git
           echo "committed successfully"
-          git push origin master -f 
+          echo $GITHUB_REF
+          git push https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git $GITHUB_REF
 
 
           # git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
           # git remote add origin git@github.com:shiviraj/counterBuild.git
           # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
+
+# git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
+# curl -u "shiviraj:${{secrets.TOKEN}}" https://github.com/shiviraj/counterBuild.git
+# git remote set-url --add origin https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git
