--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,11 +51,11 @@ jobs:
           mv ../build/.git .
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
-          git add .;
+          git add .
           git commit -m "deployed"
           echo "committed successfully"
           echo $GITHUB_REF
-          git push -uf https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git $GITHUB_REF
+          git push -uf https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git master
 
 
           # git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
