--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           cd build
           rm -rf *
-          mv -rf ../backend/* .
+          mv ../backend/* .
           git remote rm origin
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
