modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,9 +52,9 @@ jobs:
           git remote rm origin
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
-          git status
-          git add --all
-          git commit -m "deployed"
+
+          # git add --all
+          # git commit -m "deployed"
           echo "committed successfully"
           git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
           git push origin master --set-upstream -f
