--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,14 +49,17 @@ jobs:
           cd build
           rm -rf *
           mv ../backend/* .
+          git remote -v
           git remote rm origin
+          echo "removed remote"
+          git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
+          git remote -v
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
 
           # git add --all
           # git commit -m "deployed"
           echo "committed successfully"
-          git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
           git push origin master --set-upstream -f
 
 
