--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,8 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           BRANCH: master # The branch the action should deploy to.
-          FOLDER: backend # The folder the action should deploy.
-          CLEAN: true
+          FOLDER: 'backend' # The folder the action should deploy.
+          CLEAN: false
           REPOSITORY_NAME: "shiviraj/counterBuild",
 
       # - name: Push to Repo
