modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           BRANCH: master
           FOLDER: backend
           REPOSITORY_NAME: shiviraj/counterBuild
-          CLEAN: false
+          CLEAN: true
 
       # - name: Push to Repo
       #   run: |
