modified github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           cd build
           rm -rf *
           mv ../backend/* .
-          git remote set-url origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
+          git remote set-url origin https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git
           git remote -v
           git config --global user.email "58025059+shiviraj@users.noreply.github.com"
           git config --global user.name "shiviraj"
