--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,8 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: master # The branch the action should deploy to.
-          FOLDER: backend # The folder the action should deploy.
+          BRANCH: build # The branch the action should deploy to.
+          FOLDER: build # The folder the action should deploy.
           ACCESS_TOKEN: ${{ secrets.TOKEN }}
           REPOSITORY_NAME: shiviraj/counterBuild
           CLEAN: true # Automatically remove deleted files from the deploy branch
