--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           BRANCH: build # The branch the action should deploy to.
           FOLDER: build # The folder the action should deploy.
           ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          REPOSITORY_NAME: shiviraj/counterBuild
+          REPOSITORY_NAME: 'shiviraj/counterBuild'
           CLEAN: false # Automatically remove deleted files from the deploy branch
 
 
