--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,8 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           BRANCH: build # The branch the action should deploy to.
           FOLDER: build # The folder the action should deploy.
-          ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          REPOSITORY_NAME: 'shiviraj/counterBuild'
+          ACCESS_TOKEN: ${{secrets.TOKEN}}
+          REPOSITORY: 'shiviraj/counterBuild'
           CLEAN: false # Automatically remove deleted files from the deploy branch
 
 
