--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,37 +44,28 @@ jobs:
           repository: ${{secrets.USERNAME}}/${{secrets.BUILD_REPO}}
           path: build
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.6.2
+      - name: Install SSH Client 🔑
+        uses: webfactory/ssh-agent@v0.2.0
         with:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          BRANCH: build # The branch the action should deploy to.
-          FOLDER: build # The folder the action should deploy.
-          ACCESS_TOKEN: ${{secrets.TOKEN}}
-          REPOSITORY: 'shiviraj/counterBuild'
-          CLEAN: false # Automatically remove deleted files from the deploy branch
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
-
-      # - name: Push to Repo
-      #   run: |
-      #     cd build
-      #     rm -rf *
-      #     mv ../backend/* .
-      #     git remote rm origin
-      #     git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
-      #     git remote set-url origin https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git
-      #     git remote -v
-      #     git config --global user.email "58025059+shiviraj@users.noreply.github.com"
-      #     git config --global user.name "shiviraj"
-      #     echo hello > hello.txt
-      #     git add --all
-      #     git commit -m "deployed"
-      #     echo "committed successfully"
-      #     git push origin master -uf
+      - name: Push to Repo
+        run: |
+          cd build
+          rm -rf *
+          mv ../backend/* .
+          git config --global user.email "58025059+shiviraj@users.noreply.github.com"
+          git config --global user.name "shiviraj"
+          echo hello > hello.txt
+          git add --all
+          git commit -m "deployed"
+          echo "committed successfully"
+          git push origin master -uf
 
       # git push origin master --set-upstream -f remote https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
       # git remote add origin git@github.com:shiviraj/counterBuild.git
       # git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/shivi-counter.git
+
 # git remote add origin https://${{secrets.TOKEN}}:x-oauth-basic@github.com/shiviraj/counterBuild.git
 # curl -u "shiviraj:${{secrets.TOKEN}}" https://github.com/shiviraj/counterBuild.git
 # git remote set-url --add origin https://shiviraj:${{secrets.TOKEN}}@github.com/shiviraj/counterBuild.git
